RESOLVED FIXED276034
Removed text content does not always get repainted when it is inside 'display: contents'
https://bugs.webkit.org/show_bug.cgi?id=276034
Summary Removed text content does not always get repainted when it is inside 'display...
alan
Reported 2024-06-29 08:49:15 PDT
Attachments
[fast-cq]Patch (5.05 KB, patch)
2024-06-29 08:53 PDT, alan
no flags
alan
Comment 1 2024-06-29 08:53:38 PDT
Created attachment 471773 [details] [fast-cq]Patch
EWS
Comment 2 2024-06-29 11:13:57 PDT
Committed 280504@main (5ff93f10e6be): <https://commits.webkit.org/280504@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471773 [details].
Note You need to log in before you can comment on or make changes to this bug.