Removed text content does not always get repainted when it is inside 'display: contents' https://bugs.webkit.org/show_bug.cgi?id=276034 <rdar://130755978>

Reviewed by Antti Koivisto.

We miss marking the containing block dirty when removing a text renderer where
the destroy root happens to be 'display: contents' with no renderer.

* LayoutTests/fast/text/display-contents-with-text-remove-crash-expected.txt: Added.
* LayoutTests/fast/text/display-contents-with-text-remove-crash.html: Added.
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::repaintAndMarkContainingBlockDirtyBeforeTearDown):
(WebCore::RenderTreeUpdater::tearDownRenderers):

Canonical link: https://commits.webkit.org/280504@main